# ScarabRover

./: .gitignore  LICENSE  README.md  frames_2025-04-11_23.12.58.gv  frames_2025-04-18_18.09.36.gv
.github/workflows/: build_ws.yml  contributors.yml  lint_and_build.yml
assets/: Software Diagram.drawio
docs/: Guide to Manual Control.md  Guide to Run Simulation.md  Guide to Sending FC Data Over Network.md  Guide to run simulation
rover_bringup/: package.xml
rover_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
rover_controller/: CMakeLists.txt
rover_controller/config/: controller.yaml  joy_teleop.yaml
rover_controller/launch/: controller.launch.py  joystick_teleop.launch.py  keyboard_teleop.launch.py  mavros_controller.launch.py
rover_description/: CMakeLists.txt  package.xml
rover_description/launch/: display.launch.py  gazebo.launch.py  rtab.launch.py
rover_description/meshes/: base_link.stl  suspension_left_link.stl  suspension_left_link_a.stl  suspension_left_link_b.stl  suspension_right_link_a.stl  suspension_right_link_b.stl
rover_description/urdf/: rover.urdf.xacro  rover_control.xacro
rover_description/worlds/: empty.sdf  mars.world.sdf  warehouse.sdf
rover_telecom/: CMakeLists.txt  package.xml  setup.py
rover_telecom/config/: ovif_config.json
rover_telecom/rover_telecom/: ptz_camera_node.py
scripts/: marker_detection.py
src/rover_bringup/: CMakeLists.txt
src/rover_controller/: package.xml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_telecom/: package.xml  setup.cfg
(+30 files in other folders)
