<?xml version="1.0"?>
<package format="3">
  <name>rover_telecom</name>
  <version>0.0.0</version>
  <description>rover communications package</description>
  <maintainer email="renzo.damian.go@gmail.com">Renzo Damian</maintainer>
  <license>Apache 2.0</license>
  <depend>rclpy</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>onvif-zeep-pip</exec_depend>
  <exec_depend>pynput-pip</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
